# signal-viewer

./: .gitignore  README.md  audit_report.docx  create_venv.sh  generate_dummy_data.py  pyproject.toml  requirements.txt  run.sh  run_tests.py  test_results.html
signal_viewer/: __init__.py  config.py
signal_viewer/core/: database.py  hdf5_reader.py  metadata_index.py  signal_cache.py
signal_viewer/processing/: __init__.py  _rainflow.c  anomaly.py  build_native.sh  correlation.py  filtering.py  resampling.py  spectral.py  statistics.py  trend.py
signal_viewer/server/: app.py  handlers.py
signal_viewer/templates/: analysis.html  base.html  comments.html  comparison.html  documentation.html  lists.html  viewer.html
static/css/: theme.css
static/js/: app.js
tests/: test_anomaly.py  test_correlation.py  test_database.py  test_filtering.py  test_hdf5_reader.py  test_integration.py  test_metadata_index.py  test_resampling.py  test_signal_cache.py  test_spectral.py  test_statistics.py  test_trend.py
