[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-viewer"
version = "1.0.0"
description = "Engineering time series viewer and analyzer for HDF5 signal data"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "tornado>=6.0",
    "Jinja2>=3.0",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.10"]
scipy = ["scipy>=1.11"]
ml = ["scikit-learn>=1.3"]
viz = ["plotly>=5.17", "matplotlib>=3.7"]
perf = ["bottleneck>=1.3"]
full = [
    "h5py>=3.10",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "plotly>=5.17",
    "matplotlib>=3.7",
    "bottleneck>=1.3",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
signal-viewer = "signal_viewer.server.app:main"

[tool.setuptools.packages.find]
include = ["signal_viewer*"]
