[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-viewer"
version = "1.0.0"
description = "Engineering time series viewer and analyzer for HDF5 signal data"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "tornado>=6.0",
    "Jinja2>=3.0",
    "h5py>=3.10",
    "plotly>=5.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
signal-viewer = "signal_viewer.server.app:main"

[tool.setuptools.packages.find]
include = ["signal_viewer*"]
